[package]
name = "learn_quinn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
quinn = "0.10"
rcgen = "0.11"
rustls = { version = "0.21", features = ["quic"] }
tokio = { version = "1.32", features = ["rt", "time", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"